# Laudanum

./: CMakeLists.txt  README.md
cmake/modules/: Findglfw3.cmake
include/laudanum/: FDefines.hpp  FExcept.hpp  FInputListener.hpp  FShader.hpp  FStandard.hpp  FWindow.hpp  Shader.hpp
include/shaders/: fragment.glsl  vertex.glsl
src/: FExcept.cpp  FInputListener.cpp  FShader.cpp  FWindow.cpp  main.cpp
